# func-adl-types-atlas

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  pyproject.toml  test1.txt
.devcontainer/: devcontainer.json
func_adl_types_atlas/: build_xaod_edm.py
include/: class_info.hpp  collections_info.hpp  helper_files.hpp  metadata_file_finder.hpp  normalize.hpp  translate.hpp  type_helpers.hpp  util_string.hpp  utils.hpp  xaod_helpers.hpp
metadata/: add_calibration_to_job.py  calibration_event_config.py  calibration_support.py  corrections_electron.py  corrections_jet.py  corrections_met.py  corrections_muon.py  corrections_overlap.py  default_calibration_config.py  extra_metadata.yaml  pileup_tool.py  r21.yaml  sys_error_tool.py  trigger.py  type_support.py
metadata/22/: default_calibration_config.py  pileup_tool.py
metadata/25/: corrections_electron.py  corrections_jet.py  corrections_muon.py  pileup_tool.py
metadata/r21/: common_corrections.py  corrections_electron.py  corrections_jet.py  corrections_muon.py  corrections_overlap.py  corrections_tau.py  pileup_tool.py  sys_error_tool.py
scripts/: build_run_incontainer.sh  build_xaod_edm.ps1  build_xaod_edm.py  required_classes.txt  run_on_atlas_containers.sh
src/: class_info.cpp  helper_files.cpp  metadata_file_finder.cpp  normalize.cpp  translate.cpp  type_helpers.cpp  util_string.cpp  utils.cpp  xaod_helpers.cpp
tests/: t_class_info.cpp  t_metadata_file_finder.cpp  t_translate.cpp  t_type_helpers.cpp  t_xaod_helpers.cpp
tests/metadata/: base.py
tests/metadata/21/2/100/: base.py
